assets/css/style.css
/* Universal Elements and Colors*/
* {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
}

:root {
    --color_darkGrey: #31343D;
    --color_aquamarine: #92CBCE;
    --color_slategrey: #445876;
    --color_background: #eeeef7;
}

body {
    background-color: whitesmoke;
}

/* Header Elements */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--color_darkGrey);
    color: white;
    padding: 0;
    margin: 0 0 0 -20px;
}

.header h1 {
    font-size: 40px;
    padding: 4px 8px 4px 50px;
    margin: 16px;
    background-color: var(--color_aquamarine);
    color:var(--color_darkGrey);
}

.header ul {
    list-style-type: none;
    display: flex;
    align-items: stretch;
    flex-grow: 1;
    justify-content: space-evenly;
    width: 30em;
    margin-right: 20px
}

.header li {
    display: flex;
    color: var(--color_aquamarine);
    border-bottom: var(--color_aquamarine) solid 3px;
    min-width: 2vh;
    margin-bottom: 20px;
    padding: 0 0 6px 0;
    transition: .1s;
}

.header a:hover li {
    color:var(--color_slategrey);
    border-bottom: var(--color_slategrey) solid 3px;
}

.header a {
    align-content: center;
    display: inline-block;
    color: inherit;
    text-decoration: none;
    text-align: center;
    font-size: 130%;
    font-weight: 600;
    position: relative;
    margin: 0px;
    padding: 1.5em 1em .5em 1em;
    padding-bottom: 1vh;
    flex-shrink: 0;
    transition: .1s;
}

.header a:hover {
    background-color: var(--color_aquamarine);
    color:var(--color_darkGrey);
}

@media screen and (max-width: 1059px) {
    .header {
        flex-direction: column;
    }

    .header h1 {
        text-align: center;
        width: 100%;
        padding-left: 0;
    }

    .header ul {
        flex-wrap: wrap;
        max-width: 500px;

    }

    .header li {
        padding-right: 5px;
    }

}


/** Area between header and main **/

#headerBody_separator {
    display: flex;
    width: 100%;
    align-items: flex-end;
    justify-content: space-between;
    flex-wrap: nowrap;
    background-image: url("../images/fence1.jpg");
    background-size: 110%;
    background-repeat: no-repeat;
    height: 260px;
    margin-bottom: 20px;
}

#headerBody_separator h1{
    padding: 20px;
    margin-bottom: 20px;
    margin-right: 20px;
    height: 25px;
    font-size: 170%;
    background-color: var(--color_aquamarine);
}

@media screen and (max-width: 1059px) {
    #headerBody_separator{
        justify-content: center;
    }

    #headerBody_separator h1 {
        margin-left: 0;
    }
}

/** Main Elements 
    Specificty is Main>Article>section/aside
**/

main {
    justify-content: center;
}

/* Container for aside and articles */
.main-article {
    display: flex;
    height: auto;
    width: 90%;
    line-height: 150%;

    /* border: solid purple 4px; */
    padding: 20px;
}



/* Aside: flex item */
.main-article aside {
    border-right: solid var(--color_darkGrey) 4px;
    text-align: right;
    padding-right: 10px;
    min-width: 50px;
    flex: 0 0 16%;
}

aside h1 {
    font-size: 200%;
    color: var(--color_darkGrey);
}

.main-article p {
    padding-left: 20px;
    width: 100%;
}

@media screen and (max-width: 1059px) {
    .main-article {
        flex-direction: column;
        height: auto;
    }

    .main-article aside {
        border-bottom: solid var(--color_darkGrey) 4px;
        border-right: none;
        text-align: left;
        padding-bottom: 10px;
        margin-bottom: 15px;
        flex: 1 0 100%;
    }

    .main-article p {
        padding-left: 0;
    }

}

/* Nested container for work items*/
.work-container {
    display: flex;
    flex-flow: row wrap;
    flex-grow: 1;
    padding-left: 20px;
}

/* Items in work-container */
.work-container section {
    border: solid var(--color_aquamarine) 6px;
    background-size: cover;
    background-repeat:no-repeat;
}

#Solar-work {
    background-image: url('../images/system.jpg');
    flex-grow: 1;
    min-width: 90%;
    height: 300px;
    margin: 5px;
    transition: .3s;
    filter: saturate(80%);
}

#Solar-work:hover {
    filter: saturate(150%);
}

#Unity-work {
    background-image: url('../images/invaders.jpg');
    flex-grow: 1;
    min-width: 30%;
    height: 300px;
    margin: 5px;
    transition: .3s;
    filter: saturate(80%);
} 

#Unity-work:hover {
    filter: saturate(150%);
}

#MERN-work {
    background-image: url(../images/mern.jpg);
    flex-grow: 2;
    min-width: 50%;
    height: 300px;
    margin: 5px;
    transition: .3s;
    filter: saturate(80%);
}

#MERN-work:hover {
    filter: saturate(150%);
}

@media screen and (max-width: 1059px) {
    .work-container {
        padding-left: 0;
    }

    #Solar-work {
        min-width: 100%;
    }
    #Unity-work {
        min-width: 100%;
    }
    #MERN-work {
        min-width: 100%;
    }
}

/* Flex container for titles on top of content*/
.work-container span {
    display:inline-flex;
    flex-direction: column;
    align-content: flex-end;
    margin-left: -2px;
    margin-top: 200px;
    width: 200px;
    background-color: var(--color_aquamarine);
}

.work-container section h2 {
    color:rgb(11, 22, 53);
    font-size: 130%;
    font-weight: 700;
    padding-top: 10px;
    padding-left: 15px;
}

.work-container section p {
    background-color: var(--color_aquamarine);
    color:rgb(11, 22, 53);
    padding:4px;
    font-size: 100%;
    padding-left: 25px;
    padding-bottom: 10px;
    width: 171px;
    min-width: 171px;
}

/*Contact Section */
.contact-content {
    width:100%;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-evenly;
}

.contact-content img {
    border-radius: 50%;
    border: var(--color_aquamarine) solid 2px; 
    max-width: 10%;
    margin-left: 15px;
    margin-right: 5px;
}

.contact-content ul {
    display:flex;
    justify-content:space-evenly;
    width: 100%
}

.contact-content li {
    padding: 20px;
    border-bottom: var(--color_aquamarine) 3px solid;
    padding-bottom: 4px;
    padding: 0 1px 4px 1px;
}

.contact-content a {
    text-decoration: none;
    font-size: 110%;
    font-weight: bolder;
    color: var(--color_darkGrey);
}

@media screen and (max-width: 1059px) {
    .contact-content ul {
        justify-content:center;
        flex-direction: column;
    }
}

